fixed tablet next and prev button alignment issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,7 +238,7 @@ header nav .search-button:hover {
     }
 
     main article:last-child {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
 
     main article h2 {
